# pdf_research_assistant

./: .env.example  .gitignore  INSTALLATION.md  LICENSE  README.md  TESTING.md  Todo.md  bootstrap.py  manifest.example.csv  pdf_parser.py  pdf_research_assistant.py  pyproject.toml  query_once.py  query_papers.py  rebuild_index.py  requirements.txt  sandbox.html  sandbox.md  useful-commands.example.md  windows-helper-commands.example.md
.githooks/: post-push  pre-push
.github/workflows/: tests.yml
src/pdf_research_assistant/: __init__.py  app.py  bootstrap.py  cli.py  pdf_parser.py  query_once.py  rebuild.py
tests/: conftest.py  test_app.py  test_bootstrap.py  test_cli.py  test_pdf_parser.py  test_pdf_research_assistant.py  test_query_once.py  test_query_papers.py  test_rebuild.py  test_rebuild_index.py
