[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-research-assistant"
version = "0.2.4"
description = "A local PDF research assistant built with PaperQA2."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "paper-qa==2026.3.18",
    "pdfplumber",
    "python-dotenv==1.2.2",
    "streamlit==1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
pdf-research = "pdf_research_assistant.cli:main"
pdf-research-rebuild = "pdf_research_assistant.rebuild:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = ["pytest-cache-files-*"]
pythonpath = ["src"]
